--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="app">
+        <main>
+            <div class="main-container">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Ad facere cupiditate molestiae consequatur debitis 
+                praesentium sapiente optio rerum repudiandae vero suscipit, 
+                quasi hic. Id, perferendis ut sunt ab tenetur error.
+            </div>
+        </main>
+
+        <aside>
+            <div class="aside-container">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                Ducimus porro asperiores unde veniam temporibus incidunt 
+                in libero sunt tenetur a. Error deleniti et laboriosam 
+                rem illo voluptas sit eum quae?
+            </div>
+        </aside>
+    </div>
 </body>
 </html>
