adicionando o conteudo inicial do main e do aside

--- a/index.html
+++ b/index.html
@@ -15,19 +15,31 @@
     <div id="app">
         <main>
             <div class="main-container">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Ad facere cupiditate molestiae consequatur debitis 
-                praesentium sapiente optio rerum repudiandae vero suscipit, 
-                quasi hic. Id, perferendis ut sunt ab tenetur error.
+                <div class="back">
+                    <img src="./assets/icons/arrow-left-02.svg" alt="seta para esquerda">
+                    <span>Voltar</span>
+                </div>
+
+                <h1>Formulário de matrícula</h1>
+                <p>
+                    Preencha os dados abaixo para matricular seu filho na 
+                    escola de educação infantil Estrelas do Amanhã.
+                </p>
             </div>
         </main>
 
         <aside>
             <div class="aside-container">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                Ducimus porro asperiores unde veniam temporibus incidunt 
-                in libero sunt tenetur a. Error deleniti et laboriosam 
-                rem illo voluptas sit eum quae?
+                <header>
+                    <img src="./assets/logo.svg" alt="Logo do Estrolas do Amanhã">
+                    <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+                    <p>
+                        Inscreva seu filho em nossa escola e veja-o florescer 
+                        em um ambiente acolhedor, seguro e estimulante.
+                    </p>
+                </header>
+
+                <img src="./assets/Illustration.svg" alt="Ilustação de uma professora e quatro crianças">
             </div>
         </aside>
     </div>
