--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </div>
                     </fieldset>
 
-                    <fieldset class="enroll-ootions">
+                    <fieldset class="enroll-options">
                         <legend>Opções de matrícula</legend>
 
                         <div class="input-wrapper">
@@ -150,6 +150,54 @@
                                     <input type="radio" name="study-shift" value="evening" id="evening">
                                     <img src="./assets/icons/sun-02.svg" alt="ícone de sol">
                                     <label for="evening">Tarde</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+
+                            <div class="radio-wrapper">
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="football">
+                                    <img src="./assets/icons/football.svg" alt="ïcone de bola de futebol">
+                                    <label for="football">Futebol</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="basketball">
+                                    <img src="./assets/icons/basketball-02.svg" alt="ïcone de bola de basquete">
+                                    <label for="basketball">Basquete</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="swimming">
+                                    <img src="./assets/icons/swimming.svg" alt="ïcone de natação">
+                                    <label for="swimming">Natação</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="yoga">
+                                    <img src="./assets/icons/yoga-02.svg" alt="ïcone de yoga">
+                                    <label for="yoga">Yoga</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="volleyball">
+                                    <img src="./assets/icons/volleyball.svg" alt="ïcone de bola de volei">
+                                    <label for="volleyball">Volei</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="boxing">
+                                    <img src="./assets/icons/boxing-glove-01.svg" alt="ïcone de luva de boxe">
+                                    <label for="boxing">Boxe</label>
                                 </div>
                             </div>
                         </div>
