--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <select name="gender" id="gender">
                                 <option value="female">Feminino</option>
                                 <option value="male">Masculino</option>
-                                <option value="na">Prediro não responder</option>
+                                <option value="na">Prefiro não responder</option>
                             </select>
                         </div>
 
@@ -212,6 +212,16 @@
                             <strong>Política de Privacidade</strong> 
                             da escola Estrela do Amanhã. 
                         </label>
+                    </div>
+
+                    <div class="actions-wrapper">
+                        <button class="btn-secondary" type="button">
+                            Salvar respostas
+                        </button>
+
+                        <button class="btn-primary" type="submit">
+                            Fazer matrícula
+                        </button>
                     </div>
                 </form>
             </div>
